<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
    >

    <include layout="@layout/view_toolbar"></include>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_line"
        android:background="@color/line_view_color"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/white"
        >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="@dimen/text_14_size"
            android:textColor="@color/black6"
            android:text="@string/current_pwd"
            android:gravity="center"
            android:padding="@dimen/dp_10"/>

        <EditText
            android:id="@+id/current_pwd"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:background="@null"
            android:hint="@string/current_pwd_hint"
            android:padding="@dimen/dp_5"
            android:textSize="@dimen/text_14_size"
            />

    </LinearLayout>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_line"
        android:background="@color/line_view_color"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/white"
        >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="@dimen/text_14_size"
            android:textColor="@color/black6"
            android:text="@string/input_new_pwd"
            android:gravity="center"
            android:padding="@dimen/dp_10"/>

        <EditText
            android:id="@+id/new_pwd"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:background="@null"
            android:hint="@string/input_new_pwd_hint"
            android:padding="@dimen/dp_5"
            android:textSize="@dimen/text_14_size"
            />

    </LinearLayout>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_line"
        android:background="@color/line_view_color"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/white"
        >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="@dimen/text_14_size"
            android:textColor="@color/black6"
            android:text="@string/sure_new_pwd"
            android:gravity="center"
            android:padding="@dimen/dp_10"/>

        <EditText
            android:id="@+id/sure_new_pwd"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:background="@null"
            android:hint="@string/sure_new_pwd_hint"
            android:padding="@dimen/dp_5"
            android:textSize="@dimen/text_14_size"

            />

    </LinearLayout>

    <TextView
        android:id="@+id/sure"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_16_size"
        android:textColor="@color/white"
        android:text="@string/sure"
        android:background="@color/redD5"
        android:gravity="center"
        android:padding="@dimen/dp_10"
        android:layout_margin="@dimen/dp_20"
        android:clickable="true"
        />

</LinearLayout>