<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RadioGroup
        android:id="@+id/rg_tab"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="@color/white"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rb_all"
            style="@style/rbSearchChildTopStyle"
            android:layout_marginLeft="19dp"
            android:text="@string/search_all" />

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <RadioButton
            android:id="@+id/rb_mine"
            style="@style/rbSearchChildTopStyle"
            android:text="@string/my_search_car" />

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <RadioButton
            android:id="@+id/rb_receive"
            style="@style/rbSearchChildTopStyle"
            android:text="@string/receive_price_by_me" />

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <RadioButton
            android:id="@+id/rb_publish"
            style="@style/rbSearchChildTopStyle"
            android:layout_marginRight="19dp"
            android:text="@string/publish_price_by_me" />


    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginTop="1dp"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <com.autoforce.cheyixiao.common.view.CustomerSpinner
            android:id="@+id/tv_brand"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/brand"
            app:spacing="10dp"
            app:spinner_src="@drawable/ic_car_pull_down"
            app:spinner_style="adjacent"
            app:spinner_texColor="@color/black26"
            app:spinner_text="@string/brand"
            app:spinner_textSize="14sp"
            app:spinner_textStyle="bold" />

        <com.autoforce.cheyixiao.common.view.CustomerSpinner
            android:id="@+id/tv_car_type"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            app:spacing="10dp"
            app:spinner_src="@drawable/ic_car_pull_down"
            app:spinner_style="adjacent"
            app:spinner_texColor="@color/black26"
            app:spinner_text="@string/car_type"
            app:spinner_textSize="14sp"
            app:spinner_textStyle="bold" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.autoforce.cheyixiao.common.view.AutoForceRefreshLayout
            android:id="@+id/refresh_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycler_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />


        </com.autoforce.cheyixiao.common.view.AutoForceRefreshLayout>

        <!--<com.autoforce.cheyixiao.common.view.PageStateView-->
            <!--android:id="@+id/page_state_view"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="match_parent"/>-->

    </RelativeLayout>





</LinearLayout>