<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="2dp"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="28dp"
        android:paddingRight="28dp">

        <FrameLayout
            android:layout_width="33dp"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="17.5dp"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_account" />
        </FrameLayout>

        <EditText
            android:id="@+id/input_mobile"
            style="@style/registerInputStyle"
            android:hint="@string/please_input_mobile"
            android:inputType="phone"
            android:maxLength="11" />

    </LinearLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:background="@color/greyea" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="28dp"
        android:paddingRight="28dp">

        <FrameLayout
            android:layout_width="33dp"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="17dp"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_verify_code" />
        </FrameLayout>

        <EditText
            android:id="@+id/input_verify_code"
            style="@style/registerInputStyle"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:hint="@string/please_input_verify_code"
            android:inputType="number"
            android:maxLength="6" />

        <com.autoforce.cheyixiao.common.view.TimeButton
            android:id="@+id/tv_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/get_verify_code"
            android:textColor="@color/redD5"
            android:textSize="14sp" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:background="@color/greyea" />

    <TextView
        android:id="@+id/tv_next"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="29dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/button_status_bg"
        android:enabled="false"
        android:gravity="center"
        android:text="@string/next"
        android:textColor="@color/white"
        android:textSize="16sp" />


</LinearLayout>